...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="ws1-mA-LIt">
                                <rect key="frame" x="177" y="324" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ntd-NY-dVb">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="M3M-Dx-FTQ"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
...
                            <constraint firstAttribute="bottom" secondItem="58y-iL-ZlD" secondAttribute="bottom" id="M48-in-feI"/>
                            <constraint firstAttribute="trailing" secondItem="58y-iL-ZlD" secondAttribute="trailing" id="WPS-d8-Asy"/>
                            <constraint firstItem="58y-iL-ZlD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="X62-qn-jVm"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="1zI-fe-QJO"/>
                    <navigationItem key="navigationItem" customizationIdentifier="nav back button white" id="3sg-mV-k10"/>
                    <connections>
                        <outlet property="tableView" destination="58y-iL-ZlD" id="VRI-l3-3xY"/>
                        <segue destination="UvB-65-7rn" kind="presentation" identifier="ShowSingleImage" id="q30-TX-Rjk"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
